@startuml er_diagram
' Style commun — diagrammes ElevConnect
' SVG : format vectoriel net à toute taille. PNG : export haute définition.
skinparam backgroundColor #FFFFFF
skinparam dpi 180
skinparam shadowing false
skinparam roundcorner 12
skinparam linetype ortho
skinparam defaultFontName SansSerif
skinparam defaultFontSize 16
skinparam TitleFontName SansSerif
skinparam TitleFontSize 22
skinparam TitleFontColor #17324D
skinparam ArrowColor #456A7D
skinparam ArrowFontColor #29485B
skinparam ArrowThickness 1.4
skinparam NoteBackgroundColor #FFF8E8
skinparam NoteBorderColor #E5AE45
skinparam NoteFontColor #5B481E
skinparam PackageBorderColor #9AB7A7
skinparam PackageBackgroundColor #F4FAF6
skinparam PackageFontColor #1F5B43
skinparam PackageFontStyle bold
skinparam ActivityBackgroundColor #F0F8F3
skinparam ActivityBorderColor #2F7D5B
skinparam ActivityFontColor #17324D
skinparam ActivityDiamondBackgroundColor #FFF3D8
skinparam ActivityDiamondBorderColor #D8952F
skinparam ActivityBarColor #2F7D5B
skinparam ClassBackgroundColor #FFFFFF
skinparam ClassBorderColor #2F7D5B
skinparam ClassHeaderBackgroundColor #E4F3EA
skinparam ClassFontColor #17324D
skinparam EntityBackgroundColor #FFFFFF
skinparam EntityBorderColor #2F7D5B
skinparam EntityFontColor #17324D
skinparam StateBackgroundColor #EDF7F1
skinparam StateBorderColor #2F7D5B
skinparam StateFontColor #17324D
skinparam UsecaseBackgroundColor #EAF4F8
skinparam UsecaseBorderColor #3E7490
skinparam UsecaseFontColor #17324D
skinparam SequenceLifeLineBorderColor #9CB4C1
skinparam SequenceLifeLineBackgroundColor #FFFFFF
skinparam SequenceParticipantBackgroundColor #EAF4F8
skinparam SequenceParticipantBorderColor #3E7490
skinparam SequenceActorBackgroundColor #FFFFFF
skinparam SequenceActorBorderColor #2F7D5B
skinparam SequenceGroupBackgroundColor #F7FBFD
skinparam SequenceGroupBorderColor #9CB4C1
skinparam nodesep 70
skinparam ranksep 85
skinparam ActivityMargin 10
skinparam ActivityPadding 8
skinparam ParticipantPadding 20
skinparam BoxPadding 8
skinparam Padding 4
skinparam StatePadding 8

top to bottom direction
title Modèle conceptuel de données 

package "Utilisateurs" {
  entity UTILISATEUR {
    * id_utilisateur
    --
    nom
    email
    role
  }
}

package "Catalogue" {
  entity ANNONCE {
    * id_annonce
    --
    type
    prix
    quantite
    statut
  }
  entity REDUCTION_ANNONCE {
    * id_reduction
    --
    seuil_quantite
    pourcentage
  }
}

package "Vente & livraison" {
  entity COMMANDE {
    * id_commande
    --
    quantite
    montant_net
    mode_retrait
    statut
  }
  entity PAIEMENT {
    * id_paiement
    --
    total
    moyen
    statut
  }
  entity LIVRAISON {
    * id_livraison
    --
    statut
    verification_qr
  }
  entity VERSEMENT {
    * id_versement
    --
    montant
    statut
  }
}

package "Services vétérinaires" {
  entity SERVICE_VETERINAIRE {
    * id_service
    --
    titre
    prix
  }
  entity RENDEZ_VOUS {
    * id_rdv
    --
    date_prevue
    statut
  }
}

entity NOTIFICATION {
  * id_notification
  --
  contenu
  lu
}

UTILISATEUR "1,1" -- "0,n" ANNONCE : publie (fournisseur)
ANNONCE "1,1" -- "0,n" REDUCTION_ANNONCE : définit
UTILISATEUR "1,1" -- "0,n" COMMANDE : passe (tout rôle, ≠ propriétaire)
ANNONCE "1,1" -- "0,n" COMMANDE : concerne
COMMANDE "1,1" -- "0,1" PAIEMENT : règle
COMMANDE "1,1" -- "0,1" LIVRAISON : génère
UTILISATEUR "0,1" -- "0,n" LIVRAISON : assure (livreur)
PAIEMENT "1,1" -- "1,n" VERSEMENT : génère
UTILISATEUR "1,1" -- "0,n" VERSEMENT : bénéficie
UTILISATEUR "1,1" -- "0,n" SERVICE_VETERINAIRE : propose (vétérinaire)
SERVICE_VETERINAIRE "1,1" -- "0,n" RENDEZ_VOUS : concerne
UTILISATEUR "1,1" -- "0,n" RENDEZ_VOUS : demande (éleveur)
UTILISATEUR "1,1" -- "0,n" NOTIFICATION : reçoit

note bottom of LIVRAISON
  Optionnelle : absente si le retrait
  direct a été choisi par le client.
end note
@enduml
